Fix table spacing

--- a/src/components/common/TableHeading/styles.pcss
+++ b/src/components/common/TableHeading/styles.pcss
@@ -7,7 +7,7 @@
 		display: grid;
 		max-width: 1464px;
 		width: 100%;
-		grid-template-columns: 25% 160px 132px 239px 239px 119px;
+		grid-template-columns: minmax(152px, 1fr) 160px 128px 239px 239px 119px;
 		height: 50px;
 		border-bottom: 1px solid var(--color-gray-100);
 	}
