--- a/src/components/common/TableRow/styles.pcss
+++ b/src/components/common/TableRow/styles.pcss
@@ -1,8 +1,8 @@
 .table_row {
 	display: grid;
-	max-width: 1184px;
+	max-width: 1464px;
 	width: 100%;
-	grid-template-columns: 25% 160px 132px 239px 239px 119px;
+	grid-template-columns: minmax(152px, 1fr) 160px 128px 239px 239px 119px;
 	align-items: center;
 	border-bottom: 1px solid var(--color-gray-100);
 }
@@ -13,5 +13,5 @@
 	font-weight: 400;
 	color: var(--color-gray-700);
 	overflow-wrap: anywhere;
-	padding: var(--space-l) var(--space-l) var(--space-l) var(--space-m);
+	padding: var(--space-l) var(--space-l) var(--space-l) var(--space-s);
 }
